--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 </p>
                 <div class="home-sci">
                     <a href="#"  style="--1:6"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#"  style="--1:7"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://wa.me/255674969017"  style="--1:8"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://www.instagram.com/yusuph-pro/."  style="--1:7"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://wa.me/255674969017."  style="--1:8"><i class="fa-brands fa-whatsapp"></i></a>
                     <a href="#"  style="--1:9"><i class="fa-brands fa-behance"></i></a>
                 </div>
                 <a href="#" class="btn-box">More about me</a>
