--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                  corporis recusandae nemo quaerat. Sint dolorum nulla tempora dignissimos incidunt doloremque!
                 </p>
                 <div class="home-sci">
-                    <a href="#"  style="--1:6"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100089878766007"  style="--1:6"><i class="fa-brands fa-facebook"></i></a>
                     <a href="https://www.instagram.com/yusuph-pro/."  style="--1:7"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://wa.me/255674969017."  style="--1:8"><i class="fa-brands fa-whatsapp"></i></a>
                     <a href="#"  style="--1:9"><i class="fa-brands fa-behance"></i></a>
