--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="navbar">
             <a href="#" style="--i:1" class="active">Home</a>
             <a href="#"  style="--i:2">About</a>
-            <a href="#"  style="--i:3">Skills</a>
+            <a href="skills.html"  style="--i:3">Skills</a>
             <a href="#"  style="--i:4">Portfolio</a>
             <a href="#"  style="--i:5">Contact</a>
         </nav>
