--- a/skills.html
+++ b/skills.html
@@ -18,3 +18,33 @@
             <a href="#"  style="--i:4">Portfolio</a>
             <a href="#"  style="--i:5">Contact</a>
         </nav>
+
+        <div class="main">
+            <h1>MY SKILLS</h1>
+
+            <table>
+                <tr>
+                <th><h3>NORMAL SKILLS</h3></th>
+                <th><h3>TECHNICAL SKILLS</h3></th>
+            </tr>
+            <tr>
+                <td>
+                    <ul>
+                        <li>Communication Skills</li>
+                        <li>Swahili Speaking Skills</li>
+                        <li>Creativity</li>
+                    </ul>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <ul>
+                        <li>Software Solutions</li>
+                        <li>IT Consultancy</li>
+                        <li>Website Designs</li>
+                    </ul>
+                </td>
+            </tr>
+            </table>
+        </div>
