--- a/skills.html
+++ b/skills.html
@@ -19,14 +19,17 @@
             <a href="#"  style="--i:5">Contact</a>
         </nav>
 
+        <main>
         <div class="main">
             <h1>MY SKILLS</h1>
 
-            <table>
+            <table style="border: 1 solid white;">
                 <tr>
-                <th><h3>NORMAL SKILLS</h3></th>
-                <th><h3>TECHNICAL SKILLS</h3></th>
+                <th><h3>NORMAL SKILLS</h3>
+                <th><h3>TECHNICAL SKILLS</h3>
+                </th>
             </tr>
+
             <tr>
                 <td>
                     <ul>
@@ -48,3 +51,8 @@
             </tr>
             </table>
         </div>
+    </main>
+
+        
+    </body>
+    </html>
