--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
     </section>
 
 <section class="about" id="about">
-<div class="about-img">
-    <img src="own (1).jpg" alt="">
-</div>
+
+    <div class="circle">
+        <img src="own (1).jpg" alt="Circular Image">
+    </div>
+    
+
 
 <div class="about-text">
     <h2>About <span>Me</span></h2>
