--- a/skills.html
+++ b/skills.html
@@ -12,7 +12,7 @@
     <header class="header">
         <a href="#" class="logo">Portfolio</a>
         <nav class="navbar">
-            <a href="#" style="--i:1" class="active">Home</a>
+            <a href="index.html" style="--i:1" class="active">Home</a>
             <a href="#"  style="--i:2">About</a>
             <a href="skills.html"  style="--i:3">Skills</a>
             <a href="#"  style="--i:4">Portfolio</a>
