--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </header>
             <div class="container">
                 <div class="hero-pic">
-                    <img src="own (1).jpg" alt="">
+                    <img src="e1.jpg" alt="">
                 </div>
                 <div class="hero-text">
                     <h5>Hi I'm <span class="input">Graphics Designer</span></h5>
