--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
         </div>
     </div>
 
+    <footer>
+        <p>&copy; 2023 Yusuph Mteleka</p>
+    </footer>
 <script src="main.js"></script>
 </body>
 </html>
