--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
 
                 <div class="bg-white p-6 shadow-md border border-[var(--color-light-blue)] transform transition duration-300 hover:scale-105">
-                    <img src="images/child.png" alt="Motion Graphics Project 4" class="w-full h-auto mb-4 rounded-md">
+                    <img src="images/event.png" alt="Motion Graphics Project 4" class="w-full h-auto mb-4 rounded-md">
                     <h3 class="text-2xl font-semibold text-[var(--color-dark-text)] mb-2">Events promos</h3>
                     <p class="text-gray-700 text-base mb-3">
                         Graphics design for various purposes.
