--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h2 class="text-4xl font-bold text-[var(--color-pink)] text-center mb-8">Featured Work</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="bg-white p-6 shadow-md border border-[var(--color-light-blue)] transform transition duration-300 hover:scale-105">
-                    <img src="images/project1_thumbnail.jpg" alt="Motion Graphics Project 1" class="w-full h-auto mb-4 rounded-md">
+                    <img src="https://media.giphy.com/media/j0PJNh3mqPfg9IpPpH/giphy.gif" alt="Motion Graphics Project 1" class="w-full h-auto mb-4 rounded-md">
                     <h3 class="text-2xl font-semibold text-[var(--color-dark-text)] mb-2">Explainer Video</h3>
                     <p class="text-gray-700 text-base mb-3">
                         An animated and motion explainer video simplifying branding concepts for a startup.
@@ -60,7 +60,7 @@
                     <p class="text-gray-700 text-base mb-3">
                         High-energy broadcast promotion package for a company or personal program.
                     </p>
-                    <a href="videos/hexagon.mp4" class="text-[var(--color-light-blue)] hover:underline font-medium"><i class="fas fa-external-link-alt mr-2"></i>Watch Video</a>
+                    <a href="videos/votes.mp4" class="text-[var(--color-light-blue)] hover:underline font-medium"><i class="fas fa-external-link-alt mr-2"></i>Watch Video</a>
                 </div>
 
                 <div class="bg-white p-6 shadow-md border border-[var(--color-light-blue)] transform transition duration-300 hover:scale-105">
