--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
 
                 <div class="bg-white p-6 shadow-md border border-[var(--color-pink)] transform transition duration-300 hover:scale-105">
-                    <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExMng2czc4Z3NtOTk3ajBwemZwdjFqMXJyOWluOTZnZThvcmIzZTR1eCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9dg/R2neIZBkwwDkccoIW1/giphy.gif" alt="Motion Graphics Project 2" class="w-full h-auto mb-4 rounded-md">
+                    <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExNzYwdmRiZTYybnpvOWx1Y25obDZ0bDJhenVmYWJ0YTdsM25udXZ5NiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9dg/PvC89If7T3NvovNc0N/giphy.gif">
                     <h3 class="text-2xl font-semibold text-[var(--color-dark-text)] mb-2">Events branding</h3>
                     <p class="text-gray-700 text-base mb-3">
                         High-energy broadcast promotion package for a company or personal program.
