--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
 
                 <div class="bg-white p-6 shadow-md border border-[var(--color-light-blue)] transform transition duration-300 hover:scale-105">
-                    <img src="images/project5_thumbnail.jpg" alt="Motion Graphics Project 5" class="w-full h-auto mb-4 rounded-md">
+                    <img src="images/holy.png" alt="Motion Graphics Project 5" class="w-full h-auto mb-4 rounded-md">
                     <h3 class="text-2xl font-semibold text-[var(--color-dark-text)] mb-2">Celebrations </h3>
                     <p class="text-gray-700 text-base mb-3">
                         Graphics design for promoting the celebration events and acts.
