--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
         <!-- SEO Meta Tags -->
         <meta name="description" content="Explore the professional portfolio of MotionForge Studio – expert in motion graphics, explainer videos, brand animation, and more.">
-        <meta name="keywords" content="motion graphics, explainer videos, brand animation, broadcast design, motion design, after effects, social media animation, video editing, visual storytelling">
+        <meta name="keywords" content="Yuszhom Studio, Mteleka, yusuph-23, Yuzzo, motion design, after effects, social media branding, , video editing, visual storytelling">
         <meta name="author" content="Yuzhom Studio">
         <meta name="robots" content="index, follow">
         <link rel="canonical" href="https://www.yusuph-23.github.io/">
