--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <!-- Twitter Card -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Motion Graphics Specialist - Yuzhom Studio">
-        <meta name="twitter:description" content="Explore top-tier motion graphics, branding animations, and more by MotionForge Studio.">
+        <meta name="twitter:description" content="Explore top-tier motion graphics, branding animations, and more by Yuzhom Studio">
         <meta name="twitter:image" content="https://www.yusuph-23.github.io/images/social-share.jpg">
         <meta name="twitter:site" content="@Yuzhom">
         <meta name="twitter:creator" content="@Yuzhom">
     
         <!-- Favicon -->
-        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/616/616408.png" type="image/png">
         <link rel="apple-touch-icon" href="/apple-touch-icon.png">
         <link rel="manifest" href="/site.webmanifest">
     
