--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <meta name="twitter:creator" content="@Yuzhom">
     
         <!-- Favicon -->
-        <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/616/616408.png" type="image/png">
+        <link rel="icon" href="images/YUZOM.png" type="image/png">
         <link rel="apple-touch-icon" href="/apple-touch-icon.png">
         <link rel="manifest" href="/site.webmanifest">
     
