--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
         <!-- Open Graph (Facebook & LinkedIn) -->
         <meta property="og:title" content="Motion Graphics Specialist - MotionForge Studio Portfolio">
         <meta property="og:description" content="Discover high-impact motion graphics and animation work from MotionForge Studio. Boost your brand's visual storytelling.">
-        <meta property="og:image" content="https://images.unsplash.com/photo-1612831190828-0373d0d1fd56?fit=crop&w=1200&h=630&auto=format">
-        <meta property="og:url" content="https://www.yusuph-23.github.io/">
+        <meta property="og:image" content="https://www.yusuph-23.github.io/images/YUZOM.png">
+        <meta property="og:url" content="https://www.yusuph-23.github.io">
         <meta property="og:type" content="website">
         <meta property="og:site_name" content="Yuzhom Studio">
+
+        
     
         <!-- Twitter Card -->
         <meta name="twitter:card" content="summary_large_image">
