--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Motion Graphics Specialist - Yuzhom studio</title>
     
         <!-- SEO Meta Tags -->
-        <meta name="description" content="Explore the professional portfolio of MotionForge Studio – expert in motion graphics, explainer videos, brand animation, and more.">
+        <meta name="description" content="Explore the professional portfolio of Yuzhom Studio – expert in motion graphics, Graphics Design, brand animation, and more.">
         <meta name="keywords" content="Yuszhom Studio, Mteleka, yusuph-23, Yuzzo, motion design, after effects, social media branding, , video editing, visual storytelling">
         <meta name="author" content="Yuzhom Studio">
         <meta name="robots" content="index, follow">
