--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     
         <!-- SEO Meta Tags -->
         <meta name="description" content="Explore the professional portfolio of Yuzhom Studio – expert in motion graphics, Graphics Design, brand animation, and more.">
-        <meta name="keywords" content="Yuszhom Studio, Mteleka, yusuph-23, Yuzzo, motion design, after effects, social media branding, , video editing, visual storytelling">
+        <meta name="keywords" content="Yuzhom Studio, Mteleka, yusuph-23, Yuzzo, motion design, after effects, social media branding, , video editing, visual storytelling">
         <meta name="author" content="Yuzhom Studio">
         <meta name="robots" content="index, follow">
         <link rel="canonical" href="https://www.yusuph-23.github.io/">
     
         <!-- Open Graph (Facebook & LinkedIn) -->
         <meta property="og:title" content="Motion Graphics Specialist - MotionForge Studio Portfolio">
-        <meta property="og:description" content="Discover high-impact motion graphics and animation work from MotionForge Studio. Boost your brand's visual storytelling.">
+        <meta property="og:description" content="Discover high-impact motion graphics and animation work from Yuzhom Studio. Boost your brand's visual storytelling.">
         <meta property="og:image" content="https://www.yusuph-23.github.io/images/YUZOM.png">
         <meta property="og:url" content="https://www.yusuph-23.github.io">
         <meta property="og:type" content="website">
@@ -25,7 +25,7 @@
         <!-- Twitter Card -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Motion Graphics Specialist - Yuzhom Studio">
-        <meta name="twitter:description" content="Explore top-tier motion graphics, branding animations, and more by Yuzhom Studio">
+        <meta name="twitter:description" content="Explore top-tier motion graphics, branding graphics design, and more by Yuzhom Studio">
         <meta name="twitter:image" content="https://www.yusuph-23.github.io/images/social-share.jpg">
         <meta name="twitter:site" content="@Yuzhom">
         <meta name="twitter:creator" content="@Yuzhom">
