--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Open Graph (Facebook & LinkedIn) -->
         <meta property="og:title" content="Motion Graphics Specialist - MotionForge Studio Portfolio">
         <meta property="og:description" content="Discover high-impact motion graphics and animation work from Yuzhom Studio. Boost your brand's visual storytelling.">
-        <meta property="og:image" content="https://www.yusuph-23.github.io/images/YUZOM.png">
+        <meta property="og:image" content="https://yusuph-23.github.io/#portfolio/images/YUZOM.png">
         <meta property="og:url" content="https://www.yusuph-23.github.io">
         <meta property="og:type" content="website">
         <meta property="og:site_name" content="Yuzhom Studio">
