--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <!-- Open Graph Meta Tags for Social Sharing -->
         <meta property="og:title" content="Yuzhom Studio - Creative Motion Graphics">
         <meta property="og:description" content="Explore cutting-edge motion design and branding animation by Yuzhom Studio.">
-        <meta property="og:image" content="https://https://yusuph-23.github.io/#portfolio/images/YUZOM.png">
-        <meta property="og:url" content="https://yusuph-23.github.io/#portfolio/">
+        <meta property="og:image" content="https://yusuph-23.github.io/images/YUZOM.png">
+        <meta property="og:url" content="https://yusuph-23.github.io/">
         <meta property="og:type" content="website">
         <meta property="og:site_name" content="Yuzhom Studio">
 
@@ -28,7 +28,7 @@
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Motion Graphics Specialist - Yuzhom Studio">
         <meta name="twitter:description" content="Explore top-tier motion graphics, branding graphics design, and more by Yuzhom Studio">
-        <meta name="twitter:image" content="https://www.yusuph-23.github.io/images/social-share.jpg">
+        <meta name="twitter:image" content="https://yusuph-23.github.io/images/YUZOM.png">
         <meta name="twitter:site" content="@Yuzhom">
         <meta name="twitter:creator" content="@Yuzhom">
     
