--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <meta name="twitter:creator" content="@Yuzhom">
     
         <!-- Favicon -->
-        <link rel="icon" href="images/YUZOM.png" type="image/png">
+        <link rel="icon" href="images/logo.png" type="image/png">
         <link rel="apple-touch-icon" href="/apple-touch-icon.png">
         <link rel="manifest" href="/site.webmanifest">
     
@@ -47,7 +47,7 @@
 <body class="bg-white">
     <header class="gradient-header p-4 shadow-md container mx-auto fixed top-0 left-0 right-0 z-50">
         <div class="flex justify-between items-center w-full">
-            <h1 class="text-white text-3xl font-bold">MotionForge Studio</h1>
+            <h1 class="text-white text-3xl font-bold">Yuzhom Studio</h1>
             <div class="flex items-center">
                 <button id="themeToggle" class="bg-white text-[var(--color-pink)] p-2 rounded-full shadow-md transition duration-300 ease-in-out hover:scale-110 ml-4">
                     <i class="fas fa-moon text-xl"></i> </button>
