--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <!-- Open Graph Meta Tags for Social Sharing -->
         <meta property="og:title" content="Yuzhom Studio - Creative Motion Graphics">
         <meta property="og:description" content="Explore cutting-edge motion design and branding animation by Yuzhom Studio.">
-        <meta property="og:image" content="https://yusuph-23.github.io/images/logo.png">
+        <meta property="og:image" content="https://yusuph-23.github.io/images/Logo.png">
         <meta property="og:url" content="https://yusuph-23.github.io/">
         <meta property="og:type" content="website">
         <meta property="og:site_name" content="Yuzhom Studio">
