--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 </div>
                 <div class="about-image">
                     <div class="image-container">
-                        <img src="team.jpg" alt="Yuzhom Studio Team">
+                        <img src="images/team.jpg" alt="Yuzhom Studio Team">
                         <div class="image-overlay">
                             <h3>Meet Our Team</h3>
                             <p>Creative professionals dedicated to excellence</p>
@@ -233,7 +233,7 @@
                     <div class="footer-logo">
                         <a href="#home">Yuzhom<span>Studio</span></a>
                         <p>Creative Graphics & Motion Design</p>
-                        <img src="Logo.png" alt="" srcset="" width="100" height="100">
+                        <img src="images/" alt="" srcset="" width="100" height="100">
                     </div>
                     <div class="footer-links">
                         <h3>Quick Links</h3>
