--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <div class="footer-logo">
                         <a href="#home">Yuzhom<span>Studio</span></a>
                         <p>Creative Graphics & Motion Design</p>
-                        <img src="images/Logo.png" alt="" srcset="" width="100" height="100">
+                        <img src="images/Logo.png" alt="" srcset="">
                     </div>
                     <div class="footer-links">
                         <h3>Quick Links</h3>
