--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <link rel="manifest" href="/site.webmanifest">
     
         <!-- Fonts and Styles -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
         <link rel="stylesheet" href="style.css">
     </head>
 
