--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="portfolio-grid">
                     <div class="portfolio-item" data-category="graphics">
-                        <img src="https://via.placeholder.com/600x400/1a3a6a/ffffff?text=Branding+Project" alt="Branding Project">
+                        <img src="images/chid.jpg" alt="Branding Project">
                         <div class="portfolio-overlay">
                             <h3>Branding Project</h3>
                             <p>Logo & Identity Design</p>
@@ -126,28 +126,28 @@
                         </div>
                     </div>
                     <div class="portfolio-item" data-category="graphics">
-                        <img src="https://via.placeholder.com/600x400/1a3a6a/ffffff?text=Print+Design" alt="Print Design">
+                        <img src="images/Logo.png" alt="Print Design">
                         <div class="portfolio-overlay">
                             <h3>Brochure Design</h3>
                             <p>Print Design</p>
                         </div>
                     </div>
                     <div class="portfolio-item" data-category="motion">
-                        <img src="https://via.placeholder.com/600x400/1a3a6a/ffffff?text=Social+Media+Ads" alt="Social Media Ads">
+                        <img src="images/holy.png" alt="Social Media Ads">
                         <div class="portfolio-overlay">
                             <h3>Social Campaign</h3>
                             <p>Animated Ads</p>
                         </div>
                     </div>
                     <div class="portfolio-item" data-category="graphics">
-                        <img src="https://via.placeholder.com/600x400/1a3a6a/ffffff?text=Packaging+Design" alt="Packaging Design">
+                        <img src="images/event.png" alt="Packaging Design">
                         <div class="portfolio-overlay">
                             <h3>Product Packaging</h3>
                             <p>Graphic Design</p>
                         </div>
                     </div>
                     <div class="portfolio-item" data-category="motion">
-                        <img src="https://via.placeholder.com/600x400/1a3a6a/ffffff?text=Title+Sequence" alt="Title Sequence">
+                        <img src="images/1.png" alt="Title Sequence">
                         <div class="portfolio-overlay">
                             <h3>Title Sequence</h3>
                             <p>Motion Design</p>
