--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <meta name="twitter:creator" content="@Yuzhom">
     
         <!-- Favicon -->
-        <link rel="icon" href="images/Logo2.png" type="image/png">
+        <link rel="icon" href="images/Logo.png" type="image/png">
         <link rel="apple-touch-icon" href="/apple-touch-icon.png">
         <link rel="manifest" href="/site.webmanifest">
     
