--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Motion Graphics Specialist - Yuzhom Studio">
         <meta name="twitter:description" content="Explore top-tier motion graphics, branding graphics design, and more by Yuzhom Studio">
-        <meta name="twitter:image" content="https://yusuph-23.github.io/images/logo.png">
+        <meta name="twitter:image" content="https://yusuph-23.github.io/images/Logo.png">
         <meta name="twitter:site" content="@Yuzhom">
         <meta name="twitter:creator" content="@Yuzhom">
     
