--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <!-- Open Graph Meta Tags for Social Sharing -->
         <meta property="og:title" content="Yuzhom Studio - Creative Motion Graphics">
         <meta property="og:description" content="Explore cutting-edge motion design and branding animation by Yuzhom Studio.">
-        <meta property="og:image" content="https://yusuph-23.github.io/images/Logo.png">
+        <meta property="og:image" content="https://yusuph-23.github.io/images/Logo2.png">
         <meta property="og:url" content="https://yusuph-23.github.io/">
         <meta property="og:type" content="website">
         <meta property="og:site_name" content="Yuzhom Studio">
@@ -33,7 +33,7 @@
         <meta name="twitter:creator" content="@Yuzhom">
     
         <!-- Favicon -->
-        <link rel="icon" href="images/Logo.png" type="image/png">
+        <link rel="icon" href="images/Logo2.png" type="image/png">
         <link rel="apple-touch-icon" href="/apple-touch-icon.png">
         <link rel="manifest" href="/site.webmanifest">
     
